@@ -15,6 +15,7 @@ from pyfits.tests.util import catch_warnings, ignore_warnings, CaptureStdio
 
 from nose.tools import (assert_equal, assert_raises, assert_true, assert_false,
                         assert_not_equal)
+from numpy.testing import assert_allclose
 
 
 class TestImageFunctions(PyfitsTestCase):
@@ -951,3 +952,25 @@ class TestImageFunctions(PyfitsTestCase):
                 # above
                 hdul2[0].data[0] = 0
                 assert_true((hdul[1].data == hdul2[0].data).all())
+
+    def test_compression_column_tforms(self):
+        """Regression test for #199."""
+
+        # Some interestingly tiled data so that some of it is quantized and
+        # some of it ends up just getting gzip-compressed
+        data2 = ((np.arange(1, 8, dtype=np.float32) * 10)[:, np.newaxis] +
+                np.arange(1, 7))
+        np.random.seed(0xDEADBEEF)
+        data1 = np.random.uniform(size=(6 * 4, 7 * 4))
+        data1[:data2.shape[0], :data2.shape[1]] = data2
+        chdu = pyfits.CompImageHDU(data1, compressionType='RICE_1',
+                                   tileSize=(6, 7))
+        chdu.writeto(self.temp('test.fits'))
+
+        with pyfits.open(self.temp('test.fits'),
+                         disable_image_compression=True) as h:
+            assert_equal(h[1].header['TFORM1'], '1PB(49)')
+            assert_equal(h[1].header['TFORM2'], '1PD(2)')
+
+        with pyfits.open(self.temp('test.fits')) as h:
+            assert_allclose(h[1].data, data1, rtol=0.01, atol=0.01)
